Auto-create config directory and template on first run

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+# NVD API Configuration
+# Get your API key from: https://nvd.nist.gov/developers/request-an-api-key
+
+# Your NVD API key (optional but recommended for higher rate limits)
 NVD_API_KEY=
+
+# Cache TTL in seconds (default: 3600)
 NVD_CACHE_TTL=3600
+
+# Note: Configuration is checked in this order:
+# 1. Environment variables (export NVD_API_KEY=...)
+# 2. .env file in current directory
+# 3. .env file in ~/.config/nvdi/.env
+# 4. config.toml in ~/.config/nvdi/config.toml (auto-created on first run)
